--- a/Home/pages/view/orderWait/list/list.wxml
+++ b/Home/pages/view/orderWait/list/list.wxml
@@ -4,13 +4,15 @@
       </input>
   </view>
   <scroll-view class='container_order' scroll-y='true'>
-    <view class='order' wx:for='{{list}}' bindtap='toDetails' data-id='item.id'>
+    <view class='order' wx:for='{{list}}' bindtap='toDetails' data-info="{{item}}" data-id='item.id'>
       <view class='order_top'>
-        <text class='float_l'>订单编号：{{item.ordernum}}</text>
+        <text class='float_l'>订单编号：{{item.orderInfo.number}}</text>
         <text class='float_r'>
-          <text class='status_order'>{{item.status}}</text>
+          <text class='status_order'>{{
+          item.orderDetail?(item.orderDetail.serviceState==1?"未服务":item.orderDetail.serviceState==2?"服务中":item.orderDetail.serviceState==3?"已完成":""):""
+          }}</text>
           <text class='space_order'>|</text>
-          <text class='service_order'>{{item.service}}</text>
+          <text class='service_order'>{{item.orderDetail?item.orderDetail.categoryName:""}}</text>
         </text>
       </view>
       <view class='order_container'>
@@ -18,17 +20,17 @@
         <view class='content'>
           <view class='msg'>
             <text class='name'>{{item.name}}</text>
-            <text class='phone'>{{item.phone}}</text>
+            <text class='phone'>{{item.orderInfo.phone}}</text>
           </view>
           <view class='tips'>
             <view class='cont'>
               <view class='iconfont icon-fangwuxinxi'>
-                <text class='words'>房屋类型：{{item.conditon1}}</text>
+                <text class='words'>房屋类型：{{item.commodityCategory?item.commodityCategory.name:""}}</text>
               </view>
             </view>
             <view class='cont'>
               <view class='iconfont .icon-fangwumianji'>
-                <text class='words'>房屋面积：{{item.conditon2}}㎡</text>
+                <text class='words'>房屋面积：{{item.acreage}}㎡</text>
               </view>
             </view>
             <view class='cont'>
@@ -43,7 +45,7 @@
             </view>
             <view class='cont'>
               <text class='iconfont icon-location2'>
-                <text class='words'>{{item.address}}</text>
+                <text class='words'>{{item.orderDetail.detailAddress}}</text>
               </text>
             </view>
           </view>
@@ -51,20 +53,22 @@
       </view>
       <view class='btngroup'>
           <button class='prime'>立即接单</button>
-          <button class='warn' catchtap='changeshow'>放弃接单</button>
+          <button class='warn' data-ids="{{item.id}}" catchtap='changeshows'>放弃接单</button>
       </view>
     </view>
   </scroll-view>
   <view class="overback" hidden='{{showcancle}}' catchtap='changeshow' id='overback'>
     <view class='dialog'>
+      <form bindsubmit="formSubmit">
         <view class='header'>确认拒绝订单？</view>
         <view class='dialog-content'>
-            <textarea class="weui-textarea" placeholder="请输入放弃原因" />
+            <textarea name='text' class="weui-textarea" value="{{inputVal}}" placeholder="请输入放弃原因" />
         </view>
         <view class='btngroup'>
-            <view  class="certain" catchtap='giveupOrder'>确认</view>
+            <button class="cancle" formType="submit">确认</button>
             <view id='cancle' class="cancle" catchtap='changeshow'>取消</view>
         </view>
+        </form>
     </view>
      
   </view>
