--- a/Home/pages/view/userLogin/setInfo/setInfo.wxml
+++ b/Home/pages/view/userLogin/setInfo/setInfo.wxml
@@ -1,10 +1,12 @@
 <view class='mtop'>
 <view class="weui-cells weui-cells_after-title">
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__bd">头像</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">说明文字</view>
-    </navigator>
-    <navigator url="../../view/setpass/setpass" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view class="weui-cell weui-cell_access"  bindtap='goPerfect' >
+        <view class="weui-cell__bd">个人信息</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">
+        <!-- <image class='imageSzie' src='{{productInfo.bannerInfo[0].url}}'></image> -->
+        </view>
+    </view>
+    <navigator url="../setpass/setpass" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">修改密码</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
@@ -15,6 +17,6 @@
      
 </view>
     <view class='buttonWidth'>
-      <button class="weui-btn">退出账号</button>
+      <button class="weui-btn" bindtap='loginOut'>退出账号</button>
     </view>
 </view>
