--- a/Home/pages/view/presentationBox/presentation/presentation.wxss
+++ b/Home/pages/view/presentationBox/presentation/presentation.wxss
@@ -9,9 +9,11 @@
   margin-bottom: -10000px;  
   padding-bottom: 10000px; 
 }
-
+.pheight{
+  height: 100%;
+}
 .weui-tab__panel .rightBox{
- width: 78%;
+ width: 100%;
  height: 100%;
  float: left;
 overflow-y:scroll;
@@ -20,16 +22,25 @@ padding-bottom: 10px;
 }
 .weui-tab__panel{
   height: 100%;
+  width:80%;
+float:right;
+
 }
 .leftSize{
   text-align: center;
   font-size: 14px;
   border: 1px solid #ddd;
+  width: 19%;
+  float: left;
+  margin-top:50px;
+  height: 100%;
+
   /* height: 100%; */
 }
 .leftSize view{
   border-bottom: 1px dashed #ddd;
   line-height: 40px;
+  
   color: #000;
 }
 .weui-tab__content{
