--- a/Home/pages/view/userLogin/login/login.wxml
+++ b/Home/pages/view/userLogin/login/login.wxml
@@ -8,13 +8,13 @@
       <view class=" weui-cell_input weui-cell_vcode">
           <view class="weui-cell__bd">
               <view class="iconfont icon-user"></view>  
-              <input name="iphone" class="weui-input" placeholder="手机号码" />
+              <input name="iphone" value='18356987167' class="weui-input" placeholder="手机号码" />
           </view>
       </view>
       <view class=" weui-cell_input weui-cell_vcode">
           <view class="weui-cell__bd">
           <view class="iconfont icon-pass"></view>  
-              <input type='password' name="password"  class="weui-input" placeholder="输入密码" />
+              <input type='password' name="password" value='123456'  class="weui-input" placeholder="输入密码" />
           </view>
       </view>
       <view class="page__bd page__bd_spacing">
