--- a/Home/pages/view/userLogin/perfectUser/perfectUser.wxml
+++ b/Home/pages/view/userLogin/perfectUser/perfectUser.wxml
@@ -1,15 +1,17 @@
 <view class='mtop bgC'>
+
+    <form bindsubmit="formSubmit">
 <view class="weui-cells weui-cells_after-title">
-    <view  class="weui-cell " >
+    <view  class="weui-cell " catchtap="bindChooiceProduct" >
         <view class="weui-cell__bd">头像</view>
-        <image src='../../images/logo.png' class='imgSize'></image>
+        <image src='{{productInfo.bannerInfo[0].url?productInfo.bannerInfo[0].url:userinfo.adminHeadImg}}' class='imgSize'></image>
     </view>
     <view class="weui-cell weui-cell_input">
                 <view class="weui-cell__hd">
                     <view class="weui-label">姓名</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" value='贺之文' placeholder="请输入姓名"/>
+                    <input class="weui-input" name="adminName" value='{{userinfo.adminName}}' placeholder="请输入姓名"/>
                 </view>
             </view>
     <view class="weui-cell weui-cell_input">
@@ -17,12 +19,12 @@
                     <view class="weui-label">手机号码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入手机号" value='13567121787'/>
+                    <input class="weui-input" name="phone"  placeholder="请输入手机号" value='{{userinfo.phone}}'/>
                 </view>
             </view>
      
 </view>
-<view class="weui-cells weui-cells_after-title" style='margin-top:20px;'>
+<!-- <view class="weui-cells weui-cells_after-title" style='margin-top:20px;'>
    
     <view class="weui-cell weui-cell_input">
                 <view class="weui-cell__hd">
@@ -41,8 +43,9 @@
                 </view>
             </view>
      
-</view>
+</view> -->
     <view class='buttonWidth'>
-      <button class="weui-btn">确认修改</button>
+      <button formType="submit" class="weui-btn">确认修改</button>
     </view>
+    </form>
 </view>
