--- a/Home/pages/view/orderOwner/list/list.wxss
+++ b/Home/pages/view/orderOwner/list/list.wxss
@@ -11,7 +11,7 @@ page{
   background-color: #ededed;
 }
 .container_order{
-  height:930rpx;
+  /* height:930rpx; */
   overflow: hidden;
   background-color: #f5f5f5;
   padding-top:20rpx;
