--- a/Home/pages/view/orderOwner/list/list.wxml
+++ b/Home/pages/view/orderOwner/list/list.wxml
@@ -4,13 +4,15 @@
       </input>
   </view>
   <scroll-view class='container_order' scroll-y='true'>
-    <view class='order' wx:for='{{list}}' bindtap='toDetails' data-id='item.id'>
+    <view class='order' wx:for='{{contentlist}}' bindtap='toDetails' data-id='item.id'>
       <view class='order_top'>
-        <text class='float_l'>订单编号：{{item.ordernum}}</text>
+        <text class='float_l'>订单编号：{{item.orderInfo.number}}</text>
         <text class='float_r'>
-          <text class='status_order'>{{item.status}}</text>
+          <text class='status_order'>{{
+          item.orderDetail?(item.orderDetail.serviceState==1?"未服务":item.orderDetail.serviceState==2?"服务中":item.orderDetail.serviceState==3?"已完成":""):""
+          }}</text>
           <text class='space_order'>|</text>
-          <text class='service_order'>{{item.service}}</text>
+          <text class='service_order'>{{item.orderDetail?item.orderDetail.categoryName:""}}</text>
         </text>
       </view>
       <view class='order_container'>
@@ -18,17 +20,17 @@
         <view class='content'>
           <view class='msg'>
             <text class='name'>{{item.name}}</text>
-            <text class='phone'>{{item.phone}}</text>
+            <text class='phone'>{{item.orderInfo.phone}}</text>
           </view>
           <view class='tips'>
             <view class='cont'>
               <view class='iconfont icon-fangwuxinxi'>
-                <text class='words'>房屋类型：{{item.conditon1}}</text>
+                <text class='words'>房屋类型：{{item.commodityCategory?item.commodityCategory.name:""}}</text>
               </view>
             </view>
             <view class='cont'>
               <view class='iconfont .icon-fangwumianji'>
-                <text class='words'>房屋面积：{{item.conditon2}}㎡</text>
+                <text class='words'>房屋面积：{{item.acreage}}㎡</text>
               </view>
             </view>
             <view class='cont'>
@@ -43,7 +45,7 @@
             </view>
             <view class='cont'>
               <text class='iconfont icon-location2'>
-                <text class='words'>{{item.address}}</text>
+                <text class='words'>{{item.orderDetail.detailAddress}}</text>
               </text>
             </view>
           </view>
